--- a/dramatiq_dashboard/templates/queue.html
+++ b/dramatiq_dashboard/templates/queue.html
@@ -3,11 +3,11 @@
 {% from "_panel.html" import panel %}
 {% from "_tabs.html" import tabs, tab %}
 
-{% block subtitle %}Queue {{ name }}{% endblock %}
+{% block subtitle %}{{ name }}{% endblock %}
 
 {% macro action(label, uri, params, classes="button--primary") %}
   <form action="{{ uri }}" method="POST">
-    {# TODO: CSRF #}
+    {{ csrf_token()|safe }}
 
     {% for name, value in params.items() %}
       <input type="hidden" name="{{ name }}" value="{{ value }}">
